--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   # apple_sign_in:
   get: ^4.1.3
   get_storage: ^2.0.2
-  
+  share: ^2.0.1
   crypto: ^3.0.1
   http: ^0.13.1
   csv: ^5.0.0
