--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,5 +35,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/default.png
-    - assets/images/defaultDark.png
+    - assets/images/
